<resources>
    <string name="app_name">ClassHelper</string>
    <string name="info_button">通知</string>
    <string name="cloud_button">班级云</string>
    <string name="vote_button">投票  </string>
    <string name="forum_button">用户</string>
    <string name="post_info">发布通知</string>
    <string name="info_header">班级通知</string>
    <string name="info_title">近期通知一览</string>
    <string name="post_info_header">发布通知</string>
    <string name="post_info_name">请输入您的姓名：</string>
    <string name="post_info_title">请输入通知的标题：</string>
    <string name="post_info_content">请输入通知的正文：</string>
    <string name="upload_info">确认发布</string>
    <string name="info_type">请选择通知类型：</string>
    <string name="type_study">课程通知</string>
    <string name="type_normal">日常通知</string>
    <string name="type_publicity">班级公告</string>
    <string name="more">了解更多</string>
    <string name="drawer_open">Drawer is open!</string>
    <string name="drawer_close">Drawer is close!</string>
    <string name="detailed_info">通知详情</string>
    <string name="detailed_vote">投票详情</string>
    <string name="info_name">通知人：</string>
    <string name="info_time">发布时间：</string>
    <string name="post_vote">发起投票</string>
    <string name="post_vote_title">请输入投票的标题</string>
    <string name="post_vote_link">请粘贴投票的链接</string>
    <string name="post_file">上传文件</string>
    <string name="study_file">学习资料</string>
    <string name="other_file">其他文件</string>
    <string name="user_name">用户名：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="user_center">用户中心</string>
    <string name="new_password">更改密码</string>
    <string name="my_info">管理我发布的通知</string>
    <string name="my_file">管理我发布的文件</string>
    <string name="my_vote">管理我发布的投票</string>
    <string name="putin_old">请输入原密码：</string>
    <string name="putin_new">请输入新密码：</string>
    <string name="re_new">请重复新密码：</string>
    <string name="if_new_pwd">确认更改</string>
    <string name="post_file_title">请输入文件的标题</string>
    <string name="file_type">请选择文件的类型</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="repeat_pwd">重复密码：</string>
    <string name="create_class">创建班级</string>
    <string name="join_class">加入班级</string>
    <string name="college">学院：</string>
    <string name="major">专业：</string>
    <string name="year">入学年份：</string>
    <string name="class_number">班号：</string>
    <string name="sure_create">确认创建</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
