<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group.classhelper.PostInfoActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/post_block" >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_green"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/header">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/post_info"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp" />

        </android.support.v7.widget.Toolbar>



        <TextView
            android:text="@string/post_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fill_name"
            android:textSize="12sp"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/post_info_name"
            android:textStyle="normal|bold"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:text="@string/post_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fill_title"
            android:textSize="12sp"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/post_info_title"
            android:textStyle="normal|bold"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:text="@string/info_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/choose_type"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/post_info_type">

            <RadioButton
                android:text="@string/type_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/normal"
                android:layout_weight="1"
                android:textSize="14sp"
                android:checked="true" />

            <RadioButton
                android:text="@string/type_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/study"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/type_publicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publicity"
                android:layout_weight="1" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:text="@string/post_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fill_content"
            android:textSize="12sp"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/post_info_content"
            android:textStyle="normal|bold"
            android:textSize="12sp"
            android:minLines="2"
            android:maxLines="8"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:text="@string/upload_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_info"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/my_brown"
        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />
</RelativeLayout>
