<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_real_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group.classhelper.RealMainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_root"
        android:layout_above="@+id/bottom_list">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bottom_list"
        android:layout_alignParentBottom="true">

        <LinearLayout style="@style/linear_button"
            android:id="@+id/info_tab">
            <RadioButton
                style="@style/rbt_bottom"
                android:text="@string/info_button"
                android:id="@+id/real_info_button"
                android:drawableTop="@drawable/unactivated_info"
                android:textColor="@color/my_dark_blue" />
        </LinearLayout>

        <LinearLayout style="@style/linear_button"
            android:id="@+id/cloud_tab">
            <RadioButton
                style="@style/rbt_bottom"
                android:text="@string/cloud_button"
                android:id="@+id/real_cloud_button"
                android:drawableTop="@drawable/unactivated_cloud"
                android:textColor="@color/my_dark_blue" />
        </LinearLayout>

        <LinearLayout style="@style/linear_button"
            android:id="@+id/vote_tab">
            <RadioButton
                style="@style/rbt_bottom"
                android:text="@string/vote_button"
                android:id="@+id/real_vote_button"
                android:drawableTop="@drawable/unactivated_vote"
                android:textColor="@color/my_dark_blue" />
        </LinearLayout>

        <LinearLayout style="@style/linear_button"
            android:id="@+id/account_tab">
            <RadioButton
                style="@style/rbt_bottom"
                android:text="@string/user_center"
                android:id="@+id/real_account_button"
                android:drawableTop="@drawable/unactivated_account"
                android:textColor="@color/my_dark_blue" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
