<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group.classhelper.PostFileActivity">

    <Button
        android:text="@string/upload_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_button"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/my_brown"
        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_green"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/post_file"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center" />

        </android.support.v7.widget.Toolbar>

        <TextView
            android:text="@string/post_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fill_name"
            android:textSize="12sp"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/post_file_name"
            android:textStyle="normal|bold"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:text="@string/post_file_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fill_title"
            android:textSize="12sp"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/post_file_title"
            android:textStyle="normal|bold"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:text="@string/file_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/choose_type"
            android:background="@color/my_gray"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/post_file_type">

            <RadioButton
                android:text="@string/study_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/study"
                android:layout_weight="1"
                android:textSize="14sp"
                android:checked="true" />

            <RadioButton
                android:text="@string/other_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/others"
                android:layout_weight="1" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/route"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/file"
                android:id="@+id/file_button"
                android:contentDescription="" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
