<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group.classhelper.NewPasswordActivity">

    <Button
        android:text="@string/if_new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_pwd_button"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/my_brown"
        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_green"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/new_password"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_above="@+id/header"
            android:layout_alignParentStart="true"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/putin_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp"
        android:id="@+id/textView5"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:background="@color/my_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:id="@+id/old_password" />

    <TextView
        android:text="@string/putin_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:background="@color/my_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:id="@+id/real_new_password" />

    <TextView
        android:text="@string/re_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/real_new_password"
        android:layout_alignParentStart="true"
        android:id="@+id/textView11"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:background="@color/my_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:id="@+id/re_new" />

</RelativeLayout>
