<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_green"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/header"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/info_header"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_above="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="6dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp" />
        </android.support.v7.widget.Toolbar>

        <TextView
            android:text="@string/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subheader"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@color/my_brown"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:layout_below="@+id/header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/subheader"
            android:id="@+id/swipe_list">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_list"
                android:layout_alignParentStart="true">
            </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>


        <Button
            android:text="@string/post_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:id="@+id/post_info_button"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:background="@color/my_brown"
            android:textColor="@android:color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/drawer_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="0dp" >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_brown"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/bar" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/left_title"
                android:text="@string/info_type"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_above="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp" />

        </android.support.v7.widget.Toolbar>

        <TextView
            android:text="@string/type_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/normal"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/my_dark_blue"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/my_gray" />

        <TextView
            android:text="@string/type_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/study"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/my_dark_blue" />

        <TextView
            android:text="@string/type_publicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/publication"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="@color/my_dark_blue"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/my_gray" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>