<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group.classhelper.LogInActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/my_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_bar"
        android:layout_marginTop="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/my_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_name"
            android:layout_weight="4.04"
            android:layout_width="200dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_bar"
        android:id="@+id/password_bar"
        android:background="@color/my_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView7"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_weight="2.47"
            android:layout_width="200dp" />
    </LinearLayout>

    <Button
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_width="160dp"
        android:background="@color/my_green"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password_bar"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/my_green"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

</RelativeLayout>
